--- a/WebRTCWebapp/package.json
+++ b/WebRTCWebapp/package.json
@@ -17,13 +17,15 @@
     "@angular/compiler": "~11.0.1",
     "@angular/core": "~11.0.1",
     "@angular/forms": "~11.0.1",
-    "@angular/material": "^11.0.0",
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
+    "@angular/material": "^11.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "@microsoft/signalr": "^3.1.5",
+    "webrtc-adapter": "^7.6.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.2",
@@ -42,6 +44,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "~4.0.2",
+    "@types/webrtc": "0.0.26"
   }
 }
