--- a/SignalingServer/SignalingServer/SignalingServer.csproj
+++ b/SignalingServer/SignalingServer/SignalingServer.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Common" Version="5.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.Json" Version="5.0.0" />
     <PackageReference Include="System.Text.Encodings.Web" Version="5.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.10" />
   </ItemGroup>
 
 
