--- a/WebRTCAndroidApp/app/build.gradle
+++ b/WebRTCAndroidApp/app/build.gradle
@@ -20,14 +20,14 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            buildConfigField("String", "SIGNALING_HUB_URL", '"http://localhost:5000/hubs/signaling"')
+            buildConfigField("String", "SIGNALING_SERVER_URL", '"http://localhost:5000/hubs"')
             buildConfigField("String", "STUN_SERVER_1", '"stun:stun.1.google.com:19302"')
             buildConfigField("String", "STUN_SERVER_2", '"stun:stun1.l.google.com:19302"')
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug {
             minifyEnabled false
-            buildConfigField("String", "SIGNALING_HUB_URL", '"http://localhost:5000/hubs/signaling"')
+            buildConfigField("String", "SIGNALING_SERVER_URL", '"https://9b59c953c08e.ngrok.io/hubs"')
             buildConfigField("String", "STUN_SERVER_1", '"stun:stun.1.google.com:19302"')
             buildConfigField("String", "STUN_SERVER_2", '"stun:stun1.l.google.com:19302"')
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
