--- a/WebRTCAndroidApp/app/build.gradle
+++ b/WebRTCAndroidApp/app/build.gradle
@@ -3,18 +3,19 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 32
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.example.webrtcandroidapp"
         minSdkVersion 19
-        targetSdkVersion 30
+        targetSdkVersion 32
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -27,7 +28,7 @@ android {
         }
         debug {
             minifyEnabled false
-            buildConfigField("String", "SIGNALING_SERVER_URL", '"https://9b59c953c08e.ngrok.io/hubs"')
+            buildConfigField("String", "SIGNALING_SERVER_URL", '"https://759a-89-201-173-178.eu.ngrok.io/hubs"')
             buildConfigField("String", "STUN_SERVER_1", '"stun:stun.1.google.com:19302"')
             buildConfigField("String", "STUN_SERVER_2", '"stun:stun1.l.google.com:19302"')
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -40,16 +41,17 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.13.1'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.google.android.material:material:1.6.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
     // Gson
-    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.google.code.gson:gson:2.8.6'
     // WebRTC
-    implementation 'org.webrtc:google-webrtc:1.0.25821'
+    implementation 'org.webrtc:google-webrtc:1.0.30039'
     // SignalR
-    implementation 'com.microsoft.signalr:signalr:3.1.6'
+    implementation 'com.microsoft.signalr:signalr:3.1.22'
 }
