--- a/WebRTCAndroidApp/app/src/main/AndroidManifest.xml
+++ b/WebRTCAndroidApp/app/src/main/AndroidManifest.xml
@@ -19,7 +19,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WebRTCAndroidApp">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
