--- a/MediaServer/package.json
+++ b/MediaServer/package.json
@@ -22,7 +22,10 @@
   "dependencies": {
     "@mapbox/node-pre-gyp": "^1.0.10",
     "@microsoft/signalr": "^7.0.2",
+    "@types/jsdom": "^21.1.1",
+    "canvas": "^2.11.2",
     "express": "^4.17.1",
-    "wrtc": "^0.4.7"
+    "jsdom": "^21.1.1",
+    "wrtc": "0.4.7"
   }
 }
