Added Face Anonymization impl. on Android (with MediaPipe) & updated Android app dependencies

--- a/WebRTCAndroidApp/app/build.gradle
+++ b/WebRTCAndroidApp/app/build.gradle
@@ -3,13 +3,12 @@ plugins {
 }
 
 android {
-    compileSdkVersion 32
-    buildToolsVersion "30.0.3"
+    compileSdkVersion 33
 
     defaultConfig {
         applicationId "com.example.webrtcandroidapp"
-        minSdkVersion 19
-        targetSdkVersion 32
+        minSdkVersion 24
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
 
@@ -28,7 +27,7 @@ android {
         }
         debug {
             minifyEnabled false
-            buildConfigField("String", "SIGNALING_SERVER_URL", '"https://759a-89-201-173-178.eu.ngrok.io/hubs"')
+            buildConfigField("String", "SIGNALING_SERVER_URL", '"https://802e-89-164-107-131.ngrok-free.app/hubs"')
             buildConfigField("String", "STUN_SERVER_1", '"stun:stun.1.google.com:19302"')
             buildConfigField("String", "STUN_SERVER_2", '"stun:stun1.l.google.com:19302"')
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -41,17 +40,21 @@ android {
 }
 
 dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    api project(':local-sdk')
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
     // Gson
     implementation 'com.google.code.gson:gson:2.8.6'
-    // WebRTC
-    implementation 'org.webrtc:google-webrtc:1.0.30039'
     // SignalR
     implementation 'com.microsoft.signalr:signalr:3.1.22'
+    // MediaPipe
+    def mediaPipeSdkVersion = '0.10.15'
+    implementation "com.google.mediapipe:solution-core:${mediaPipeSdkVersion}"
+    implementation "com.google.mediapipe:facedetection:${mediaPipeSdkVersion}"
 }
