--- a/WebRTCAndroidApp/app/src/main/AndroidManifest.xml
+++ b/WebRTCAndroidApp/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.WebRTCAndroidApp">
+        android:theme="@style/Theme.WebRTCAndroidApp"
+        android:networkSecurityConfig="${networkSecurityConfig}">
         <activity
             android:name=".MainActivity"
             android:exported="true">
